--- a/deno.json
+++ b/deno.json
@@ -1,4 +1,8 @@
 {
+  "name": "@kamranayub/ts-has-guards",
+  "version": "0.1.0",
+  "exports": "./main.ts",
+  "license": "Apache-2.0",
   "tasks": {
     "dev": "deno run --watch main.ts"
   }
